<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b11"
    tools:context="presentation.fragments.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:lines="1"
        android:text="@string/settings"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/music_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:lines="1"
        android:text="@string/music"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h25" />

    <ImageView
        android:id="@+id/button_music"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/volume_on"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h50"
        app:layout_constraintEnd_toEndOf="@id/guideline_v80"
        app:layout_constraintStart_toStartOf="@id/guideline_v20"
        app:layout_constraintTop_toTopOf="@id/guideline_h32" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vibration_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:lines="1"
        android:text="@string/vibration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h50" />

    <ImageView
        android:id="@+id/button_vibration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/volume_on"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h70"
        app:layout_constraintEnd_toEndOf="@id/guideline_v80"
        app:layout_constraintStart_toStartOf="@id/guideline_v20"
        app:layout_constraintTop_toTopOf="@id/guideline_h57" />

    <TextView
        android:id="@+id/remove_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:contentDescription="@string/exit"
        android:focusable="true"
        app:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:lines="1"
        android:text="@string/remove_account"
        android:textColor="@color/red"
        android:shadowColor="@color/white"
        android:shadowRadius="10.0"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h84"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h79" />

    <TextView
        android:id="@+id/text_button_reset_score"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="top"
        android:lines="1"
        app:layout_constraintWidth_percent="0.45"
        android:text="@string/reset_score"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_v80"
        app:layout_constraintStart_toStartOf="@id/guideline_v20"
        app:layout_constraintTop_toTopOf="@id/guideline_h84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>